--- a/style.css
+++ b/style.css
@@ -6,17 +6,21 @@
 form{
     text-align: center;
     align-items: center;
-   background: #0024;
+    justify-content: center;
+   background: rgba(232, 232, 237, 0.267);
     width: 30%;
+    height: 30%;
     padding: 20px;
     display: block;
-    margin-top: 14rem; 
-    box-shadow: 30px 10px 10px 10px rgb(68, 67, 67);
-   
+    margin-left: 30%;
+    margin-top: 4rem;
+    border-radius: 8%; 
+    box-shadow: 30px 10px 10px  rgb(68, 67, 67);
 }
 
-h1{
+p{
     font-size: 2rem;
+    margin-top: 40px;
     text-align: center;
     align-items: center;
 }
@@ -24,18 +28,20 @@ input{
     width: 80%;
     height: 30px;
     border-radius: 5px;
+    border: none;
     padding: 20px;
-    margin: 5px;
-    background-color:rgb(245, 213, 218);
+    margin: 10px 10px 10px 10px;
+    background-color:rgb(114, 217, 252);
 
 }
 input:hover{
-    background-color: rgb(255, 200, 200);
+    background-color: rgb(243, 250, 252);
 }
 input::placeholder{
    font-size: 15px;
 }
 button{
+    border: none;
     border-radius: 5px;
     width:40%;
     height: 30px;
